# multi-camera-calibration-using-human-pose

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cameracell.cpp  cameracell.h  cameracell.ui  images.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  utils.cpp  utils.h
PoseEstimation/: characterset_convert.h  rtmdet_onnxruntime.cpp  rtmdet_onnxruntime.h  rtmpose_onnxruntime.cpp  rtmpose_onnxruntime.h  rtmpose_utils.h
